--- a/content/post/15-04-17.md
+++ b/content/post/15-04-17.md
@@ -6,4 +6,4 @@ title = "15-04-17"
 
 * a "naked" or "root" domain, i.e. one without the _www_ prefix, is also called an _apex_ domain
 * about Git's [`worktree`](https://git-scm.com/docs/git-worktree) feature 
-* that CloudFlare's Page Rules can be utilized to force an SSL-redirection, which comes in handy since GitHub pages doesn't support such a feature for custom domains
+* that CloudFlare's Page Rules can be utilized to force an SSL-redirection, which comes in handy since GitHub Pages doesn't support such a feature for custom domains
