--- a/content/post/16-04-17.md
+++ b/content/post/16-04-17.md
@@ -4,4 +4,5 @@ date = "2017-04-16T09:46:43+08:00"
 +++
 
 * that Chrome is introducing a so-called [scroll anchoring](https://blog.google/products/chrome/taking-aim-annoying-page-jumps-chrome/), which prevents those sudden jumps back to the top of the page
+* that the original version of a song from my childhood is France Gall's [Poupée de cire, poupée de son](https://www.youtube.com/watch?v=rRva0YOVtcI), and that there's a music genre/style called _yé-yé_
 
