--- a/content/post/17-04-17.md
+++ b/content/post/17-04-17.md
@@ -3,5 +3,5 @@ date = "2017-04-17T09:11:09+08:00"
 title = "17-04-17"
 +++
 
-* that "placebo," or the "make-believe medicine" got its name from Latin _placēbō_, which means "I shall please," and has nothing to do with places or time
+* that _placebo_, or the "make-believe medicine," got its name from Latin _placēbō_, which means "I shall please," and has nothing to do with places or time
 
