--- a/content/post/17-04-17.md
+++ b/content/post/17-04-17.md
@@ -4,4 +4,5 @@ title = "17-04-17"
 +++
 
 * that _placebo_, or the "make-believe medicine," got its name from Latin _placēbō_, which means "I shall please," and has nothing to do with places or time
-
+* that Iced Earth's album _Something Wicked This Way Comes_ got its name from "something wicked this way comes," part of a line from Shakespeare's Macbeth
+* that the name Iced Earth was suggested to Jon Schaffer (guitarist) by his childhood best friend Bill Blackmon, who would later die in a motorbike accident, which then went on to inspire the song [Watching Over Me](https://www.youtube.com/watch?v=7jGw3QXsnTY)
