--- a/content/post/18-04-17.md
+++ b/content/post/18-04-17.md
@@ -4,4 +4,4 @@ title = "18-04-17"
 +++
 
 * that Victor Hugo and his life-long mistress Juliette Drouet spent the first night together on 16 February 1833, which is the same date as Marius and Cosette (of _Les Misérables_)'s wedding night. 
-
+* about [Antinous](https://en.wikipedia.org/wiki/Antinous), [Gracchus](https://en.wikipedia.org/wiki/Gaius_Gracchus), [Saint-Just](https://en.wikipedia.org/wiki/Louis_Antoine_de_Saint-Just), [Aristogeiton, and Harmodius](https://en.wikipedia.org/wiki/Harmodius_and_Aristogeiton)
