--- a/content/post/19-04-17.md
+++ b/content/post/19-04-17.md
@@ -4,5 +4,5 @@ title = "19-04-17"
 +++
 
 * that one of Apple's goals with every OS update is to break libraries and make developers suffer
-* of [BackBlaze](https://www.backblaze.com), a (seems to be) great S3-alternative and good candidate for Koel's integration
+* of [BackBlaze](https://www.backblaze.com), a (seems to be) great S3-alternative and good candidate for Koel's next integration
 
