--- a/content/post/19-04-17.md
+++ b/content/post/19-04-17.md
@@ -5,4 +5,4 @@ title = "19-04-17"
 
 * that one of Apple's goals with every OS update is to break libraries and make developers suffer
 * of [BackBlaze](https://www.backblaze.com), a (seems to be) great S3-alternative and good candidate for Koel's next integration
-
+* of [`scroll-behavior`](https://css-tricks.com/almanac/properties/s/scroll-behavior/), a new CSS property to define whether the browser should jump (`auto`) `smooth`ly scroll to an anchored location
