--- a/content/post/19-04-17.md
+++ b/content/post/19-04-17.md
@@ -5,7 +5,7 @@ title = "19-04-17"
 
 * that one of Apple's goals with every OS update is to break libraries and make developers suffer
 * of [BackBlaze](https://www.backblaze.com), a (seems to be) great S3-alternative and good candidate for Koel's next integration
-* of [`scroll-behavior`](https://css-tricks.com/almanac/properties/s/scroll-behavior/), a new CSS property to define whether the browser should jump (`auto`) `smooth`ly scroll to an anchored location
+* of [`scroll-behavior`](https://css-tricks.com/almanac/properties/s/scroll-behavior/), a new CSS property to define whether the browser should jump (`auto`) or `smooth`ly scroll to an anchored location
 * that support for CSS variables (aka "custom properties") is [pretty decent](http://caniuse.com/#search=css%20variable) now, which also means I should start using them, lest I get lagged behind
 * of "Culture add > culture fit", quoting [@Una](https://twitter.com/Una/status/846808949672366080), a saying so awesome that GitLab [added it into their handbook](https://gitlab.com/gitlab-com/www-gitlab-com/commit/ed1ddd8935807b2bfda52304ca64118d31822601)
 
