--- a/content/post/20-04-17.md
+++ b/content/post/20-04-17.md
@@ -6,3 +6,4 @@ title = "20-04-17"
 
 * that mobile navigation is [moving to the bottom of the screens](https://blog.prototypr.io/bottom-navigation-interface-fa4bff52065f)
 * how to create slightly more advanced [fish](https://fishshell.com/) functions
+* that there's [this child molester](https://en.wikipedia.org/wiki/Christopher_Paul_Neil) who posted swirled images of his face online, which then got un-swirled by the Interpol using computer technologies, leading to his arrest in 2007
