--- a/content/post/21-04-17.md
+++ b/content/post/21-04-17.md
@@ -4,4 +4,4 @@ title = "21-04-17"
 +++
 
 * that "Weird Al" Yankovic did a parody of "Bohemian Rhapsody" titled [_Bohemian Polka_](https://www.youtube.com/watch?v=-RcEhSOLUPY) with the same lyrics and structure, but in polka style
-
+* of [Google.org](https://www.google.org/), Google's charitable arm – can't believe I've never thought about this before
