--- a/content/post/22-04-17.md
+++ b/content/post/22-04-17.md
@@ -4,4 +4,4 @@ title = "22-04-17"
 +++
 
 * that [Facebook is developing a way to read our minds](https://www.recode.net/2017/4/19/15361568/facebook-mark-zuckerberg-brain-mind-reader-regina-dugan-building-f8)
-
+* that if the earth would be a 40 year old guy, humans would have been using tools for a week and a half, and just left Africa 8 hours ago to settle around the globe
