--- a/content/post/23-04-17.md
+++ b/content/post/23-04-17.md
@@ -4,5 +4,5 @@ title = "23-04-17"
 +++
 
 * when interrogated by an SS officer about his painting _Guernica_, "Did you do that?" Picasso replied, "No, you did."
-* that lodash uses `splice` in its mutating functions (`remove`, `pull` etc.), causing Vue's [array change detection](https://vuejs.org/v2/guide/list.html#Array-Change-Detection) to fail 
+* that lodash uses `splice` in its mutative functions (`remove`, `pull` etc.), causing Vue's [array change detection](https://vuejs.org/v2/guide/list.html#Array-Change-Detection) to fail 
 * how to change a Git commit's timestamp with `GIT_COMMITTER_DATE`
