--- a/content/post/24-04-17.md
+++ b/content/post/24-04-17.md
@@ -4,4 +4,5 @@ title = "24-04-17"
 +++
 
 * of the latest guitarist of Stratovarius, Matias Kupiainen, and [his mad skills](https://www.youtube.com/watch?v=Vl45xrH3j-s)
-
+* that Uber was still tracking its users even after the app had been deleted, and
+* that Uber identified Apple personnel using geo-data and would obfuscate the app's code to hide said activity from Apple
