--- a/content/post/24-04-17.md
+++ b/content/post/24-04-17.md
@@ -6,3 +6,4 @@ title = "24-04-17"
 * of the latest guitarist of Stratovarius, Matias Kupiainen, and [his mad skills](https://www.youtube.com/watch?v=Vl45xrH3j-s)
 * that Uber was still tracking its users even after the app had been deleted, and
 * that Uber identified Apple personnel using geo-data and would obfuscate the app's code to hide said activity from Apple
+* that people almost never kick in a street fight, simply because they're not properly trained – it takes a lot of skills to actually kick someone
