--- a/content/post/25-04-17.md
+++ b/content/post/25-04-17.md
@@ -4,4 +4,5 @@ title = "25-04-17"
 +++
 
 * the difference between Composer CLI options `--prefer-dist` and `--prefer-source`
+* that the expansion of the universe can be faster than light. This explains why the universe is estimated to be 92 billion light years in diameter even though the Big Bang happened "only" 13.8 billion years ago.
 
