--- a/content/post/26-04-17.md
+++ b/content/post/26-04-17.md
@@ -4,4 +4,5 @@ title = "26-04-17"
 +++
 
 * that JavaScript has a [battery status API](https://developer.mozilla.org/en/docs/Web/API/Battery_Status_API)
-
+* that _absolute_ pure water is actually lethal, because it would pull essential minerals out of your cells and leave you deader than dead
+* of [Postal](https://github.com/atech/postal), an open-source SendGrid/Mailgun alternative
