--- a/content/post/27-04-17.md
+++ b/content/post/27-04-17.md
@@ -4,4 +4,5 @@ title = "27-04-17"
 +++
 
 * of [`Referrer-Policy`](https://scotthelme.co.uk/a-new-security-header-referrer-policy/), a new security header that allows controls over referrer information
-
+* that PHP 5.4 and older have a funny (read: sad) easter egg, where adding `?=PHPE9568F34-D428-11d2-A769-00AA001ACF42` to the URL of a PHP script will produce the PHP logo
+* that `php -r 'class A { public function __clone() { clone $this; } } clone new A();'` produces a SegFault error in PHP, a bug still exists in PHP 7
