--- a/content/post/29-04-17.md
+++ b/content/post/29-04-17.md
@@ -4,4 +4,5 @@ title = "29-04-17"
 +++
 
 * of [`tap`](https://medium.com/@taylorotwell/tap-tap-tap-1fc6fc1f93a6), one of Taylor Otwell's favorite Laravel helpers
-
+* again, that you can use `unicode-range` to [combine fonts](https://jakearchibald.com/2017/combining-fonts/) in CSS
+* that the arguably best anagram in English is cinematographer/megachiropteran
