--- a/content/post/30-04-17.md
+++ b/content/post/30-04-17.md
@@ -5,4 +5,4 @@ title = "30-04-17"
 
 * that reindeers can see UV light
 * that there's a version of _The Tortoise and the Hare_ where everyone dies in a forest fire because the tortoise, having won the race and therefore seen as the fastest, is given the job of warning everyone
-
+* that you can make a (proven) [home pregnancy test](https://www.quora.com/How-can-I-make-a-home-pregnancy-test-with-toothpaste/answer/Jo-Berah) with toothpaste
