--- a/content/post/01-05-17.md
+++ b/content/post/01-05-17.md
@@ -3,5 +3,5 @@ date = "2017-05-01T21:31:19+07:00"
 title = "01-05-17"
 +++
 
-* "Butt" is a valid SVG stroke-linecap value (credits [@dan_abramov](https://twitter.com/dan_abramov/status/859038430570872833))
-
+* "butt" is a valid SVG stroke-linecap value (credits [@dan_abramov](https://twitter.com/dan_abramov/status/859038430570872833))
+* that black coders are more likely to get a job offer but for less money
