--- a/content/post/01-05-17.md
+++ b/content/post/01-05-17.md
@@ -5,3 +5,4 @@ title = "01-05-17"
 
 * "butt" is a valid SVG stroke-linecap value (credits [@dan_abramov](https://twitter.com/dan_abramov/status/859038430570872833))
 * that black coders are more likely to get a job offer but for less money
+* that Hoàng Việt loved Phạm Duy's _Tình Ca_ so much that he decided to name one of his songs exactly the same 
