--- a/content/post/02-05-17.md
+++ b/content/post/02-05-17.md
@@ -4,4 +4,4 @@ title = "02-05-17"
 +++
 
 * that Basecamp open-sourced their [employee handbook](https://github.com/basecamp/handbook/blob/master/README.md)
-
+* to use `async / await`
