--- a/content/post/02-05-17.md
+++ b/content/post/02-05-17.md
@@ -5,5 +5,5 @@ title = "02-05-17"
 
 * that Basecamp open-sourced their [employee handbook](https://github.com/basecamp/handbook/blob/master/README.md)
 * to use `async / await`
-* that to turn an object into an array, `[].concat(obj) ` is [significantly slower](https://jsperf.com/array-coerce) than `obj == null ? [] : (Array.isArray(obj) ? obj : [obj])`
-`
+* that to turn an object into an array, `[].concat(obj)` is [significantly slower](https://jsperf.com/array-coerce) than `obj == null ? [] : (Array.isArray(obj) ? obj : [obj])`
+* that Spotify users have made over 35 million playlists with emojis in their titles
