--- a/content/post/04-05-17.md
+++ b/content/post/04-05-17.md
@@ -4,3 +4,5 @@ title = "04-05-17"
 +++
 
 * of Space Booze, massive (1000x the size of our solar system) clouds of alcohol floating around in our universe. A space booze has enough beer to let every human on earth drink 300,000 pint of beer for almost a billion years.
+* that there are planets made of pure diamonds
+* that a Venus year is shorter than a Venus day
