--- a/content/post/05-05-17.md
+++ b/content/post/05-05-17.md
@@ -4,4 +4,4 @@ title = "05-05-17"
 +++
 
 * that if Taylor Otwell is [hit by a bus](https://en.wikipedia.org/wiki/Bus_factor), Jeffrey Way (of Laracasts) will [take over](https://www.reddit.com/r/laravel/comments/3bewjn/what_happens_to_laravel_if_taylor_otwell_is/csljobh/) Laravel  
-
+* about Cunningham's Law: The best way to get the right answer on the internet is not to ask a question, it's to post the wrong answer
