--- a/content/post/07-05-17.md
+++ b/content/post/07-05-17.md
@@ -4,4 +4,4 @@ title = "07-05-17"
 +++
 
 * that, at least in the US, if you own a daycare you have to go through yearly training to renew the license, including how to spot a child abuse
-
+* of [_The Kiss of Judas_](https://www.facebook.com/AnimalRightsMedia/posts/894960120552165), a photo showing a bull running up to his breeder hoping he would save him, only to receive a hypocritical kiss and be sent back to his death
