--- a/content/post/08-05-17.md
+++ b/content/post/08-05-17.md
@@ -4,4 +4,4 @@ title = "08-05-17"
 +++
 
 * that Michael Jackson once tried to buy Marvel so he could play Spider Man in the movies
-
+* of [the strange mystery of the man from Taured](http://coolinterestingstuff.com/the-strange-mystery-of-the-man-from-taured)
