--- a/content/post/08-05-17.md
+++ b/content/post/08-05-17.md
@@ -6,3 +6,4 @@ title = "08-05-17"
 * that Michael Jackson once tried to buy Marvel so he could play Spider Man in the movies
 * of [the strange mystery of the man from Taured](http://coolinterestingstuff.com/the-strange-mystery-of-the-man-from-taured)
 * of [curvature continuity](https://hackernoon.com/apples-icons-have-that-shape-for-a-very-good-reason-720d4e7c8a14), or why Apple's icons have that shape
+* that Marvel's Mantis, a former Avenger, is half-Vietnamese and was born in Huế, Vietnam 
