--- a/content/post/09-05-17.md
+++ b/content/post/09-05-17.md
@@ -4,4 +4,4 @@ title = "09-05-17"
 +++
 
 * that there's actually [a LOT of people](https://news.ycombinator.com/item?id=14273549) who dislike Redux
-
+* that Neil Amstrong refused to swear on the Bible that he actually did go to the moon
