--- a/content/post/10-05-17.md
+++ b/content/post/10-05-17.md
@@ -4,4 +4,4 @@ title = "10-05-17"
 +++
 
 * of [these two sentences](https://www.quora.com/Has-President-Trump-performed-better-than-President-Obama-thus-far/answer/Ron-Wagner-2) which I find quite amusing: "I trust that Trump will go into our nation’s history books with records for many things. Hopefully, number one will be the fastest anyone has ever been impeached."
-
+* of the 20/80 rule: You gain 80% of a skill in the first 20% of the time invested, and the rest 20% of the skill takes the remaining 80% of your practice
