--- a/content/post/31-05-17.md
+++ b/content/post/31-05-17.md
@@ -4,4 +4,4 @@ title = "31-05-17"
 +++
 
 * that Kodak had digital camera in 1977 but failed to improvise it
-
+* that my all-time favorite movie _One Flew Over the Cuckoo's Nest_ was filmed in an actual mental hospital and many of the extras were actual patients 
