--- a/content/post/31-05-17.md
+++ b/content/post/31-05-17.md
@@ -5,3 +5,4 @@ title = "31-05-17"
 
 * that Kodak had digital camera in 1977 but failed to improvise it
 * that my all-time favorite movie _One Flew Over the Cuckoo's Nest_ was filmed in an actual mental hospital and many of the extras were actual patients 
+* that pornhub.com, redtube.com, youporn.com etc., basically the top adult video websites, are all owned by a company called [MindGeek](https://en.wikipedia.org/wiki/MindGeek)
