--- a/content/post/03-06-17.md
+++ b/content/post/03-06-17.md
@@ -4,4 +4,4 @@ title = "03-06-17"
 +++
 
 * that Elon Musk, in his early days, once flew to South East Asia and "practiced poverty" by live on $1 a day – eating nothing but oranges, hot dogs, and pasta
-
+* that Norway once knighted [a penguin](https://en.wikipedia.org/wiki/Nils_Olav)
