--- a/content/post/05-06-17.md
+++ b/content/post/05-06-17.md
@@ -6,3 +6,4 @@ title = "05-06-17"
 * that my OSS project [Koel](https://github.com/phanan/koel) has a Scrunitizer code quality of 9.26 (very good), and I'm quite proud of it
 * of permanent shadows, or "nuclear shadows," "shadows" formed by atom bomb explosions such as those in Hiroshima and Nagasaki, such as [this one](https://qph.ec.quoracdn.net/main-qimg-ec8dc0a5cfe04cdf722f631443fe1144.webp)
 * that "biceps" is actually a singular word, the plural form of which is "biciptes"
+* that a woman named Teri Horton once bought a painting by [Jackson Pollock](https://en.wikipedia.org/wiki/Jackson_Pollock) for $5. After learning who he is, she managed to sell the painting for $50 million.
