--- a/content/post/06-06-17.md
+++ b/content/post/06-06-17.md
@@ -4,3 +4,4 @@ title = "06-06-17"
 +++
 
 * that the English word cereal is derived from "Ceres," the Roman goddess of harvest and agriculture
+* that there's no such a thing as "World War II" in Britain – British always refer to it as "The Second World War"
