--- a/content/post/09-06-17.md
+++ b/content/post/09-06-17.md
@@ -4,4 +4,4 @@ title = "09-06-17"
 +++
 
 * how to properly test traits and abstract classes with PHPUnit
-
+* of [galactic years](https://en.wikipedia.org/wiki/Galactic_year), and that our sun is about 20 years old and will die at 54
