--- a/content/post/09-06-17.md
+++ b/content/post/09-06-17.md
@@ -5,3 +5,4 @@ title = "09-06-17"
 
 * how to properly test traits and abstract classes with PHPUnit
 * of [galactic years](https://en.wikipedia.org/wiki/Galactic_year), and that our sun is about 20 years old and will die at 54
+* that "between the eyes" is actually the hardest part of the skull, and in real life you wouldn't shoot someone between the eyes if you really mean to 100% kill them
