--- a/content/post/18-06-17.md
+++ b/content/post/18-06-17.md
@@ -4,4 +4,4 @@ title = "18-06-17"
 +++
 
 * that if you fold a piece of paper 50 times, its thickness will be 3/4 the distance from  the Earth to the Sun, and at 100 folds it will have the radius of the whole universe
-
+* that Apple makes new employees work on fake projects until they can be trusted
