--- a/content/post/21-06-17.md
+++ b/content/post/21-06-17.md
@@ -4,4 +4,4 @@ title = "21-06-17"
 +++
 
 * of `place-items`, the short-hand property to set both `align-items` and `justify-items` in a flex box model
-
+* of [Unit 731](https://en.wikipedia.org/wiki/Unit_731), a Japanese “research” unit in occupied China during 1935–1945 that was responsible for some of the most notorious war crimes committed by Japan
