--- a/content/post/03-07-17.md
+++ b/content/post/03-07-17.md
@@ -5,3 +5,4 @@ title = "03-07-17"
 
 * that Eminem doesn't allow swearing in his house
 * that Wolverine was once torn in half by the Hulk, and was left that way for 3.5 years
+* that `https://github.com/<username>.png` redirects to the user's current avatar: [https://github.com/phanan.png](https://github.com/phanan.png)
