--- a/content/post/08-07-17.md
+++ b/content/post/08-07-17.md
@@ -4,4 +4,5 @@ title = "08-07-17"
 +++
 
 * that creating a map that perfectly represents the Earth is [mathematically impossible](https://www.youtube.com/watch?v=kIID5FDi2JQ)
-
+* to use [data provider](https://phpunit.de/manual/current/en/appendixes.annotations.html#appendixes.annotations.dataProvider) in PHPUnit
+* about PHPUnit's [incomplete and skipped tests](https://phpunit.de/manual/3.7/en/incomplete-and-skipped-tests.html)
