--- a/content/post/22-08-17.md
+++ b/content/post/22-08-17.md
@@ -4,4 +4,4 @@ title = "22-08-17"
 +++
 
 * about CSS3's [`vmin`](https://css-tricks.com/viewport-sized-typography/)
-
+* that MySQL/MariaDB's binary logs can be behemoths and eat up your disk space - make sure you [purge](https://dev.mysql.com/doc/refman/5.7/en/purge-binary-logs.html) them once in a while
