--- a/content/post/03-09-17.md
+++ b/content/post/03-09-17.md
@@ -5,3 +5,4 @@ title = "03-09 17"
 +++
 
 * that BBC has a [pidgin](https://www.bbc.com/pidgin) version
+* that after calling [`Carbon::setTestNow($mockDate)`](/post/29-08-17/) you should call `Carbon::setTestNow()` again (without arguments) to reset to the normal behavior and not affect another tests
