--- a/content/post/06-09-17.md
+++ b/content/post/06-09-17.md
@@ -4,5 +4,5 @@ title = "06-09-17"
 +++
 
 * that the word "animal" has its root as _animal_ ("breath, spririt") 
-* of _animism_, the belief that every place, every animal, every plan, and every natural phenomenon has awareness and feelings, and can communicate directly with humans
+* of _animism_, the belief that every place, every animal, every plant, and every natural phenomenon has awareness and feelings, and can communicate directly with humans
 
