--- a/content/post/06-09-17.md
+++ b/content/post/06-09-17.md
@@ -3,6 +3,6 @@ date = "2017-09-06T20:48:58+01:00"
 title = "06-09-17"
 +++
 
-* that the word "animal" has its root as _animal_ ("breath, spririt") 
+* that the word "animal" has its root as Latin's _anima_ ("breath, spririt") 
 * of _animism_, the belief that every place, every animal, every plant, and every natural phenomenon has awareness and feelings, and can communicate directly with humans
 
