--- a/content/post/07-09-17.md
+++ b/content/post/07-09-17.md
@@ -4,4 +4,4 @@ title = "07-09-17"
 +++
 
 * that [the Atari 2600 version of Donkey Kong](https://www.youtube.com/watch?v=IzI1RBdK2_g) was developed to work on systems with 4,096 bytes of memory and 128 bytes of RAM
-
+* that Scorpions' _[White Dove](https://www.youtube.com/watch?v=dYnS6WGjATU)_ is a cover of Omega's _[Gyöngyhajú lány](https://www.youtube.com/watch?v=CGt-rTDkMcM)_
