--- a/content/post/08-10-17.md
+++ b/content/post/08-10-17.md
@@ -7,3 +7,4 @@ title = "08-10-17"
 * that any working phone, whether in service or not, will dial 911
 * that yawning is visually contagious
 * that putting batteries in a fridge doubles their lifespan
+* that my heart doesn't stop when I sneeze (my life's been a lie)
