--- a/content/post/26-11-17.md
+++ b/content/post/26-11-17.md
@@ -4,3 +4,4 @@ date = "2017-11-27T00:15:02+01:00"
 +++
 
 * that in JavaScript  you can convert characters to their non-accented versions by just doing `str.normalize("NFD").replace(/[\u0300-\u036f]/g, "");`
+* that China bans time travel on TV, saying it "disrespects history"
