--- a/content/post/11-12-17.md
+++ b/content/post/11-12-17.md
@@ -3,4 +3,4 @@ title = "11-12-17"
 date = "2017-12-11T00:23:44+01:00"
 +++
 
-* that if you're testing a JS-based app with generators (e.g. `async/await`), you'll need `require('babel-polyfill')` to make sure the polyfill is loaded before the generator is initialized. This will prevent the `regeneratorRuntime is not defined` error.
+* that if you're testing a JS-based app with generators (e.g. `async/await`), you'll need `require('babel-polyfill')` prior to booting the app to make sure the polyfill is loaded before the generator is initialized. This will prevent the `regeneratorRuntime is not defined` error.
