--- a/content/post/02-02-18.md
+++ b/content/post/02-02-18.md
@@ -3,4 +3,4 @@ title = "02-02-18"
 date = "2018-02-02T15:56:50+01:00"
 +++
 
-* to use `-webkit-font-smoothing: antialiase` to fix the [issue](https://stackoverflow.com/questions/29543697/using-fontawesome-as-css-pseudo-background-results-in-blurry-icons) with FontAwesome icons being blurry if used as CSS pseudo background
+* to use `-webkit-font-smoothing: antialiased` to fix the [issue](https://stackoverflow.com/questions/29543697/using-fontawesome-as-css-pseudo-background-results-in-blurry-icons) with FontAwesome icons being blurry if used as CSS pseudo background
