--- a/content/post/15-07-18.md
+++ b/content/post/15-07-18.md
@@ -4,8 +4,10 @@ date = "2018-07-15T20:37:05+02:00"
 +++
 
 * that the famous line illusion 
+
 ```
 <---->
 >----<
 ```
-is called the _[Müller-Lyner's illusion]_ and there are several variations of it
+
+is called the _[Müller-Lyner's illusion](https://en.wikipedia.org/wiki/M%C3%BCller-Lyer_illusion)_ and there are several variations of it
