--- a/content/post/15-07-18.md
+++ b/content/post/15-07-18.md
@@ -12,4 +12,5 @@ date = "2018-07-15T20:37:05+02:00"
 
 is called the _[Müller-Lyner's illusion](https://en.wikipedia.org/wiki/M%C3%BCller-Lyer_illusion)_ and there are several variations of it
 
-* of table methods (`insertRow()`, `insertCell()` et. al.), `toggle()`, `matches()` and [other HTML element methods](https://hackernoon.com/15-html-element-methods-youve-potentially-never-heard-of-fc6863e41b2a) that are not very popular but can certainly come in handy one day
+* of table methods (`insertRow()`, `insertCell()` et. al.), `toggle()`, `matches()` and [other HTML element methods](https://hackernoon.com/15-html-element-methods-youve-potentially-never-heard-of-fc6863e41b2a) that are not very popular but can certainly come in handy one day 
+* of [Mustafa Kemal Atatürk](https://en.wikipedia.org/wiki/Mustafa_Kemal_Atat%C3%BCrk), or the "Father of the Turks," the first president of Turkey 
