--- a/content/post/15-07-18.md
+++ b/content/post/15-07-18.md
@@ -14,3 +14,4 @@ is called the _[Müller-Lyner's illusion](https://en.wikipedia.org/wiki/M%C3%BCl
 
 * of table methods (`insertRow()`, `insertCell()` et. al.), `toggle()`, `matches()` and [other HTML element methods](https://hackernoon.com/15-html-element-methods-youve-potentially-never-heard-of-fc6863e41b2a) that are not very popular but can certainly come in handy one day 
 * of [Mustafa Kemal Atatürk](https://en.wikipedia.org/wiki/Mustafa_Kemal_Atat%C3%BCrk), or the "Father of the Turks," the first president of Turkey 
+* that the book [_The Bridge on the Drina_](https://en.wikipedia.org/wiki/The_Bridge_on_the_Drina) brought its author, Ivo Andrić, the Nobel Prize in Literature in 1961
