--- a/content/post/12-08-18.md
+++ b/content/post/12-08-18.md
@@ -3,4 +3,5 @@ title = "12-08-18"
 date = "2018-08-12T18:22:54+02:00"
 +++
 
-* how to cache resources write an offline-first app with service workers
+* how to cache resources write an offline-first app with service workers 
+* that CSS gradients can look funny on iOS Safari and we might want to utilize (inset) box shadows instead
